[metadata]
name = streamable
version = 0.0.1
author = Matheus Polachini
author_email = matheuspolachini@outlook.com
description = Package and CLI utility for interacting with streamable.com
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/matheuspolachini/streamable-python
project_urls =
    Bug Tracker = https://github.com/matheuspolachini/streamable-python/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pyperclip
    importlib-metadata >= 1.0; python_version < "3.8"
    
[options.entry_points]
console_scripts =
    streamable = streamable.cli:main